[package]
name = "quilkin-xdp"
version = "0.1.0"
description = "quilkin's XDP library"
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
xdp.workspace = true
# Used to load and attach eBPF programs, note we use a git dependency here as aya has updated many dependencies but has
# not made a release in over half a year
aya = { git = "https://github.com/aya-rs/aya", rev = "2453204" }
# Allows forwarding trace messages from eBPF programs to a global logger, note we use a git dependency here as aya has
# updated many dependencies but has not made a release in over half a year
aya-log = { git = "https://github.com/aya-rs/aya", rev = "2453204" }
libc.workspace = true

[lints]
workspace = true
